@@ -1,3 +1,8 @@
+*queuemetrics-19.10.3 (12 Nov 2019)
+
+  12 Nov 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.3.ebuild:
+  app-metrics/queuemetrics: version bump to 19.10.3
+
 *queuemetrics-19.10.2 (24 Oct 2019)
 
   24 Oct 2019; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.2.ebuild:
